[package]
name = "rustengine"
version = "0.1.0"
edition = "2018"

[dependencies]
raylib = "5.0.2"
druid = "0.7.0"
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "24.0.1"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
egui = "0.26"
eframe = "0.26"